add basic markup to about page

--- a/css/index.css
+++ b/css/index.css
@@ -167,6 +167,12 @@ header nav div a {
     margin: 20px 0;
 }
 
+
+
+
+
+/* ~Box Stuffs~ */
+
 .middle-content .boxes .box-1 {
     background: teal;
 }
