--- a/css/index.css
+++ b/css/index.css
@@ -167,9 +167,13 @@ header nav div a {
     margin: 20px 0;
 }
 
-.about-content {
+.full-content {
     padding: 0 20px 20px 20px;
     margin-bottom: 20px;
+    
+}
+
+.full-content.top {
     border-bottom: 1px dashed black;
 }
 
@@ -180,9 +184,23 @@ header nav div a {
 }
 
 .about-box {
-    width: 48%;
+    width: 46%;
     border-bottom: 1px dashed black;
-    padding: 1%;
+    padding-bottom: 10px;
+    margin: 10px 0 50px 0;
+}
+
+.about-box .box-text {
+    margin: 10px 0;
+}
+
+.about-box button {
+    background: white;
+    border: 1px solid black;
+    border-radius: 10px;
+    font-size: 12pt;
+    padding: 10px 23px;
+    margin: 10px 0;
 }
 
 
