--- a/css/index.css
+++ b/css/index.css
@@ -226,6 +226,116 @@ header nav div a:hover {
     color: tomato;
 }
 
+.dummy {
+    display: none;
+}
+
+/* ~Improvised Hamburger Menu Witchcraft~ */
+/* Based (very) heavily on https://codepen.io/erikterwan/pen/EVzeRP?editors=1100 */
+
+#menuToggle {
+    display: none;
+    position: relative;
+    z-index: 1;
+
+    margin-left: 5%;
+    
+    -webkit-user-select: none;
+    user-select: none;
+}
+
+#menuToggle input {
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
+    
+    cursor: pointer;
+    
+    opacity: 0;
+    z-index: 2;
+    
+    -webkit-touch-callout: none;
+}
+
+#menuToggle span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    
+    background: #cdcdcd;
+    border-radius: 3px;
+    
+    z-index: 1;
+    
+    transform-origin: 4px 0px;
+    
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                opacity 0.55s ease;
+}
+
+#menuToggle span:first-child {
+    transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2) {
+    transform-origin: 0% 100%;
+}
+
+#menuToggle input:checked ~ span {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #232323;
+}
+
+#menuToggle input:checked ~ span:nth-last-child(3) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+#menuToggle input:checked ~ span:nth-last-child(2) {
+    transform: rotate(-45deg) translate(1px, 0);
+}
+
+/*
+* Make this absolute positioned
+* at the top left of the screen
+*/
+#menu {
+    position: absolute;
+    width: 500px;
+    margin: -100px 0 0 -50px;
+    padding: 50px;
+    padding-top: 125px;
+    
+    background: #ededed;
+    list-style-type: none;
+    -webkit-font-smoothing: antialiased;
+    /* to stop flickering of text in safari */
+    
+    transform-origin: 0% 0%;
+    transform: translate(0, -100%);
+    
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li {
+    padding: 10px 0;
+    font-size: 22px;
+}
+
+/*
+* And let's slide it in from the left
+*/
+#menuToggle input:checked ~ ul {
+    transform: none;
+}
+
 /*  ~Responsive Stuffs~  */
 
 @media(max-width: 500px) {
@@ -257,8 +367,42 @@ header nav div a:hover {
         width: 100%;
         padding: 25px 10%;
     }
-}
 
+    header nav {
+        align-items: center;
+    }
+
+    header nav .links {
+        display: none;
+    }
+
+    .dummy {
+        display: block;
+        flex: 1;
+    }
+
+    #menuToggle {
+        display: block;
+        flex: 1;
+    }
+
+    #menuToggle span {
+        background: tomato;
+    }
+
+    header {
+        margin-top: 0px;
+        position: fixed;
+        width: 100%;
+        background: lightgray;
+    }
+
+    .banner {
+        padding-top: 80px;
+        margin-top: 0;
+    }
+    
+}
 
 /*  Is it a good animation?  No.  I kind of hate it.
     Needs a lot of work.  But it is *an* animation */
