--- a/css/index.css
+++ b/css/index.css
@@ -418,7 +418,9 @@ header nav div a:hover {
 
     .full-content {
         width: 80%;
-        margin: 20px auto;
+        margin: auto;
+        margin-bottom: 20px;
+        padding: 0 0 20px 0;
     }
 }
 
